--- a/src/i18n/translations/esp.json
+++ b/src/i18n/translations/esp.json
@@ -1,7 +1,8 @@
 {
   "translation": {
+    "selectYourLanguage": "FR -> Select your language",
     "about": "About",
-    "sobreMi": "Un poquito sobre mi..",
+    "aboutMe": "A bit about me...",
     "aboutMeText": "Sou natural do estado do Pará e há mais de 3 anos moro em Florianópolis. Minha primeira formação acadêmica é como Bacharel em Turismo. Atuei como intérprete, guia, monitora, conheci várias pessoas e lugares. Mas... Faltava aquele, sabe? As I have always been interested in technology, I decided to invest in this area as soon as I had the opportunity."
   }
 }
