--- a/src/i18n/translations/esp.json
+++ b/src/i18n/translations/esp.json
@@ -1,8 +1,24 @@
 {
   "translation": {
-    "selectYourLanguage": "FR -> Select your language",
-    "about": "About",
-    "aboutMe": "A bit about me...",
-    "aboutMeText": "Sou natural do estado do Pará e há mais de 3 anos moro em Florianópolis. Minha primeira formação acadêmica é como Bacharel em Turismo. Atuei como intérprete, guia, monitora, conheci várias pessoas e lugares. Mas... Faltava aquele, sabe? As I have always been interested in technology, I decided to invest in this area as soon as I had the opportunity."
+    "selectLanguage": "Outros idiomas: ",
+    "home": "Comezo",
+    "aboutNavBar": "Sobre",
+    "experiencieNavBar": "Experiencia",
+    "projectsNavBar": "Proyectos",
+    "linkedin": "LinkedIn",
+    "resume": "Currículum",
+    "greeting": "Hola, distinguido visitante. Mi nombre es",
+    "name": "Sabrina Drashen.",
+    "profession": "Soy desarolladora Front End",
+    "about": "Sobre",
+    "aboutMe": "Un poco sobre mí...",
+    "aboutMeText": "Soy del estado de Pará y vivo en Florianópolis desde hace más de 3 años. Mi primera formación académica es como Licenciada en Turismo. Trabajé como intérprete, guía, monitora, y conocí a varias personas y lugares. Pero... ese &quot;click&quot;, ¿sabes? Como siempre me ha interesado la tecnología, decidí invertir en esta área en cuanto tuve la oportunidad. ¡Decisión acertada! Me gusta crear, innovar, enfrentar retos, se trabajar en equipo y creo que en este nuevo campo profesional puedo llegar lejos, actualmente estoy buscando oportunidades de trabajo, aprendizaje y crecimiento en el mercado tecnológico.",
+    "experiencie": "Experiencia",
+    "expText": "Tecnologias con las que he trabajado",
+    "projects": "Proyectos",
+    "warnProjects": "Esta sección está en desarrollo. Pronto podrás ver mi portafolio completo",
+    "warnMouse": "Pasa el mouse sobre la imagen de abajo.",
+    "visitGithub": "Visita mi Github"
+
   }
 }
