feat:edit more languages configs

--- a/src/i18n/translations/esp.json
+++ b/src/i18n/translations/esp.json
@@ -7,7 +7,7 @@
     "projectsNavBar": "Proyectos",
     "linkedin": "LinkedIn",
     "resume": "Currículum",
-    "greeting": "Hola, distinguido visitante. Mi nombre es",
+    "greeting": "Hola, distinguido visitante! Mi nombre es",
     "name": "Sabrina Drashen.",
     "profession": "Soy desarolladora Front End",
     "about": "Sobre",
