--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -7,7 +7,7 @@
     "projectsNavBar": "Projetos",
     "linkedin": "LinkedIn",
     "resume": "Currículo",
-    "greeting": "Olá, ilustre visitante. Meu nome é",
+    "greeting": "Olá, ilustre visitante! Meu nome é",
     "name": "Sabrina Drashen.",
     "profession": "Sou desenvolvedora Front End",
     "about": "Sobre",
