refactor: adjust spanish text

--- a/src/i18n/translations/esp.json
+++ b/src/i18n/translations/esp.json
@@ -1,12 +1,12 @@
 {
   "translation": {
-    "home": "Comezo",
+    "home": "Inicio",
     "about": "Sobre",
-    "experience": "Experiencia",
+    "experience": "Experiencia laboral",
     "projectsNavBar": "Proyectos",
     "linkedin": "LinkedIn",
     "resume": "Currículum",
-    "greeting": "Hola, distinguido visitante! Mi nombre es",
+    "greeting": "¡Hola, estimado (a) visitante! Mi nombre es",
     "name": "Sabrina Drashen.",
     "profession": "Soy desarolladora Front End",
     "aboutMe": "Un poco sobre mí...",
