refactor: change text line on engJSON file

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -10,7 +10,7 @@
     "name": "Sabrina Drashen.",
     "profession": "I'm a Front End developer",
     "aboutMe": "A bit about me...",
-    "aboutMeText": "I am from Pará State and I have lived in Florianópolis for over 3 years now. I first graduated as a Bachelor of Tourism. I worked as an interpreter, guide, monitor, and I met several people and places. But... that &quot;click&quot; was missing, you know? As I have always been into technology, I decided to jump in this area as soon as I had the opportunity. Right decision! I like to creating, innovating, facing challenges, Ihave great hability to work in group and I believe that in this new professional field I can go far away. I am currently looking for job opportunities and to learn more and grow in the technology.",
+    "aboutMeText": "I am from Pará State and I have lived in Florianópolis for over 3 years now. I first graduated as a Bachelor of Tourism. I worked as an interpreter, guide, monitor, and I got to know several people and places. But... that &quot;click&quot; was missing, you know? As I have always been into technology, I decided to jump in this area as soon as I had the opportunity. Right decision! I like to creating, innovating, facing challenges, Ihave great hability to work in group and I believe that in this new professional field I can go far away. I am currently looking for job opportunities and to learn more and grow in the technology.",
     "expText": "Technologies I've worked with",
     "warnProjects": "Work in progress. Soon, you will be able to check out my complete portfolio.",
     "warnMouse": "Mouse over the image below.",
