refactor: change hoem letter on enJSON file

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -1,6 +1,6 @@
 {
   "translation": {
-    "home": "home",
+    "home": "Home",
     "about": "About",
     "experience": "Experience",
     "projects": "Projects",
