fix: button back to top language

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -14,7 +14,7 @@
     "expText": "Technologies I've worked with",
     "warnProjects": "Work in progress. Soon, you will be able to check out my complete portfolio.",
     "warnMouse": "Mouse over the image below.",
-    "visitGithub": "Visit my Github"
-
+    "visitGithub": "Visit my Github",
+    "buttonToTop": "Back to top"
   }
 }
