--- a/src/i18n/translations/esp.json
+++ b/src/i18n/translations/esp.json
@@ -15,6 +15,7 @@
     "projects": "Proyectos",
     "warnProjects": "Esta sección está en desarrollo. Pronto podrás ver mi portafolio completo",
     "warnMouse": "Pasa el mouse sobre la imagen de abajo.",
-    "visitGithub": "Visita mi Github"
+    "visitGithub": "Visita mi Github",
+    "buttonToTop": "Volver arriba"
   }
 }
