--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -14,6 +14,7 @@
     "expText": "Tecnologias com as quais já trabalhei",
     "warnProjects": "Esta seção está em fase de desenvolvimento. Logo, você poderá conferir meu portfólio completo.",
     "warnMouse": "Passe o mouse na imagem abaixo.",
-    "visitGithub": "Visite meu Github"
+    "visitGithub": "Visite meu Github",
+    "buttonToTop": "Voltar ao topo"
   }
 }
