refactor: edit texts

--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -12,9 +12,8 @@
     "aboutMe": "Um pouco sobre mim...",
     "aboutMeText": "Sou natural do estado do Pará e há mais de 3 anos moro em Florianópolis. Minha primeira formação acadêmica é como Bacharel em Turismo. Atuei como intérprete, guia, monitora, conheci várias pessoas e lugares. Mas... Faltava aquele \"click\", sabe? Como sempre tive interesse na tecnologia, decidi investir nessa área assim que tive a oportunidade. Decisão acertada! Gosto de criar, inovar, enfrentar desafios, sei trabalhar em equipe e acredito que neste novo campo profissional posso ir bem longe. Atualmente, busco oportunidades de trabalho, aprendizado e crescimento no mercado tecnológico.",
     "expText": "Tecnologias com as quais já trabalhei",
-    "warnProjects": "Esta seção está em fase de desenvolvimento. Logo, você poderá conferir meu portifólio completo.",
+    "seeProjects": "Veja alguns dos meus trabalhos",
     "warnMouse": "Passe o mouse na imagem abaixo.",
-    "visitGithub": "Visite meu Github",
     "buttonToTop": "Voltar ao topo"
   }
 }
