--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -12,9 +12,8 @@
     "aboutMe": "A bit about me...",
     "aboutMeText": "I am from Pará State and I have lived in Florianópolis for over 3 years now. I first graduated as a Bachelor of Tourism. I worked as an interpreter, guide, monitor, and I got to know several people and places. But... that \"click\" was missing, you know? As I have always been into technology, I decided to jump in this area as soon as I had the opportunity. Right decision! I like to creating, innovating, facing challenges, I have great hability to work in group and I believe that in this new professional field I can go far away. I am currently looking for job opportunities and to learn more and grow in the technology.",
     "expText": "Technologies I've worked with",
-    "warnProjects": "Work in progress. Soon, you will be able to check out my complete portfolio.",
+    "seeProjects": "Check out some of my works",
     "warnMouse": "Mouse over the image below.",
-    "visitGithub": "Visit my Github",
     "buttonToTop": "Back to top"
   }
 }
