--- a/src/i18n/translations/esp.json
+++ b/src/i18n/translations/esp.json
@@ -13,9 +13,8 @@
     "aboutMeText": "Soy del estado de Pará y vivo en Florianópolis desde hace más de 3 años. Mi primera formación académica es como Licenciada en Turismo. Trabajé como intérprete, guía, monitora, y conocí a varias personas y lugares. Pero... ese \"click\", ¿sabes? Como siempre me ha interesado la tecnología, decidí invertir en esta área en cuanto tuve la oportunidad. ¡Decisión acertada! Me gusta crear, innovar, enfrentar retos, se trabajar en equipo y creo que en este nuevo campo profesional puedo llegar lejos, actualmente estoy buscando oportunidades de trabajo, aprendizaje y crecimiento en el mercado tecnológico.",
     "expText": "Tecnologias con las que he trabajado",
     "projects": "Proyectos",
-    "warnProjects": "Esta sección está en desarrollo. Pronto podrás ver mi portafolio completo",
+    "seeProjects": "Mira algunos de mis trabajos",
     "warnMouse": "Pasa el mouse sobre la imagen de abajo.",
-    "visitGithub": "Visita mi Github",
     "buttonToTop": "Volver arriba"
   }
 }
